updated projects, and added a few upcoming papers

--- a/papers/feick2021illusions/index.html
+++ b/papers/feick2021illusions/index.html
@@ -104,6 +104,8 @@
 	<a href="http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4)</a><br/>
 
 
+	<a href="https://doi.org/10.1145/3411764.3445456"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3411764.3445456)</a><br/>
+
 </p>
 
 
@@ -117,7 +119,8 @@
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {26.3% - 749/2844},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4}<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3411764.3445456}<br />
 }<br />
 </p>
 					</div>
