--- a/papers/feick2022illusions/index.html
+++ b/papers/feick2022illusions/index.html
@@ -106,6 +106,8 @@
 	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4)</a><br/>
 
 
+	<a href="https://doi.org/10.1145/3491102.3517671"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3491102.3517671)</a><br/>
+
 </p>
 
 
@@ -120,7 +122,8 @@
 &nbsp;&nbsp;acceptance = {24.7% - 638/2579},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2022-chi2022-feick-illusions.pdf},<br />
 &nbsp;&nbsp;videourl = {http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4},<br />
-&nbsp;&nbsp;url = {http://hcitang.org/papers/2022-chi2022-feick-illusions-talk.mp4}<br />
+&nbsp;&nbsp;url = {http://hcitang.org/papers/2022-chi2022-feick-illusions-talk.mp4},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3491102.3517671}<br />
 }<br />
 </p>
 					</div>
