--- a/papers/index.html
+++ b/papers/index.html
@@ -123,6 +123,60 @@
 						
 <h1><a name="2023"></a>2023</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/pratte2023designspace"><span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space.pdf "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space-artifact-set.pdf"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href="https://doi.org/10.1145/3569009.3573899"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/pratte2023designspace/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2023voxelhap"><span id="feick2023voxelhap">Martin Feick, Cihan Biyikli, Kiran Gani, Anton Wittig, Anthony Tang, and Antonio Krüger. (2023). <span style="text-decoration: underline">VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 121/483 - 25.1%.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href=""><i class="fa fa-film"></i></a>
+
+
+	<a href=""><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2023voxelhap/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/mok2023autisticlivestreamers"><span id="mok2023autisticlivestreamers">Terrance Mok, Anthony Tang, Adam McCrimmon, and Lora Oehlberg. (2023). <span style="text-decoration: underline">Experiences of Autistic Twitch Livestreamers: "I have made easily the most meaningful and impactful relationships"</span>. In <i>ASSETS 2023: Proceedings of the 25th International ACM SIGACCESS Conference on Computers and Accessibility</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+
+
+
+	<a href=""><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/mok2023autisticlivestreamers/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/pratte2023hacklesworkshop"><span id="pratte2023hacklesworkshop">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
 
 	(Lee-Smith, Matthew and Benjamin, Jesse Josua and Desjardins, Audrey and Funk, Mathias and Odom, William and Oogjes, Doenja and Park, Young-Woo and Pierce, James and Sanches, Pedro and Tsaknaki, Vasiliki, Eds.)
@@ -195,23 +249,27 @@
 
 </section><a class="details" href="/papers/feick2023handredirection/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/pratte2023designspace"><span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+    <a href="/papers/feick2023turnitup"><span id="feick2023turnitup">Martin Feick, André Zenner, Oscar Ariza, Anthony Tang, Cihan Biyikli, and Antonio Krüger. (2023). <span style="text-decoration: underline">Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
 
 (conference).</a><br />
 
+	<small>Acceptance: 121/483 - 25.1%.</small>
 
 
 
-	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space.pdf "><i class="fa fa-file-pdf-o"></i></a>
+	<br />
 
 
-	<a href=" http://hcitang.org/papers/2023-tei2023-pratte-fashiontech-design-space-artifact-set.pdf"><i class="fa fa-sticky-note-o"></i></a>
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href="https://doi.org/10.1145/3569009.3573899"><i class="fa fa-external-link"></i></a>
+	<a href=""><i class="fa fa-film"></i></a>
 
-</section><a class="details" href="/papers/pratte2023designspace/"><!-- --></a></li></ol>
+
+	<a href=""><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2023turnitup/"><!-- --></a></li></ol>
 
 <h1><a name="2022"></a>2022</h1>
 <ol class="bibliography"><li><section id="citation">
@@ -226,6 +284,8 @@
 
 
 
+
+	<a href="https://doi.org/10.1145/3492829"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/labrie2022onlineteaching/"><!-- --></a></li>
 <li><section id="citation">
@@ -257,7 +317,7 @@
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
-	<a href="https://uist.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
+	<a href="https://cscw.acm.org/2022/"><i class="fa fa-sticky-note-o"></i></a>
 
 
 	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i></a>
@@ -447,6 +507,8 @@
 	<a href="http://hcitang.org/papers/2022-chi2022-feick-illusions.mp4"><i class="fa fa-film"></i></a>
 
 
+	<a href="https://doi.org/10.1145/3491102.3517671"><i class="fa fa-external-link"></i></a>
+
 </section><a class="details" href="/papers/feick2022illusions/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/jones2022rescuecastr"><span id="jones2022rescuecastr">Brennan Jones, Anthony Tang, and Carman Neustaedter. (2022). <span style="text-decoration: underline">RescueCASTR: Exploring Photos and Live Streaming to Support Contextual Awareness in the Wilderness Search and Rescue Command Post</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 2, CSCW.</span>
@@ -463,7 +525,7 @@
 	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href="https://dl.acm.org/doi/10.1145/3512960"><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3512960"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/jones2022rescuecastr/"><!-- --></a></li>
 <li><section id="citation">
@@ -504,6 +566,8 @@
 	<a href="https://www.youtube.com/watch?v=JBCzPt5ILxo"><i class="fa fa-sticky-note-o"></i></a>
 
 
+
+	<a href="https://doi.org/10.1145/3430524.3440644"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/pratte2021empathy/"><!-- --></a></li>
 <li><section id="citation">
@@ -548,6 +612,8 @@
 
 	<a href="http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4"><i class="fa fa-film"></i></a>
 
+
+	<a href="https://doi.org/10.1145/3472749.3474746"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/li2021routetapestries/"><!-- --></a></li>
 <li><section id="citation">
@@ -597,6 +663,8 @@
 
 
 
+	<a href="https://doi.org/10.1145/3411763.3451751"><i class="fa fa-external-link"></i></a>
+
 </section><a class="details" href="/papers/poretski2021whatsapplbw/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/feick2021illusions"><span id="feick2021illusions">Martin Feick, Niko Kleer, André Zenner, Anthony Tang, and Antonio Krüger. (2021). <span style="text-decoration: underline">Visuo-haptic Illusions for Linear Translation and Stretching using Physical Proxies in Virtual Reality</span>. In <i>CHI 2021: Proceedings of the 2021 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
@@ -616,6 +684,8 @@
 
 	<a href="http://hcitang.org/papers/2021-chi2021-feick-visio-haptic-illusions.mp4"><i class="fa fa-film"></i></a>
 
+
+	<a href="https://doi.org/10.1145/3411764.3445456"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2021illusions/"><!-- --></a></li>
 <li><section id="citation">
@@ -640,6 +710,8 @@
 
 	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4"><i class="fa fa-film"></i></a>
 
+
+	<a href="https://doi.org/10.1145/3411764.3445355"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/mahadevan2021hri/"><!-- --></a></li>
 <li><section id="citation">
@@ -805,7 +877,7 @@
 
 </section><a class="details" href="/papers/anjani2020mukbang/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/feick2020tangj"><span id="feick2020tangj">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
+    <a href="/papers/feick2020tangitr"><span id="feick2020tangitr">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
 
 (techreport).</a><br />
 
@@ -817,7 +889,7 @@
 
 
 
-</section><a class="details" href="/papers/feick2020tangj/"><!-- --></a></li>
+</section><a class="details" href="/papers/feick2020tangitr/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/stark2020thesis"><span id="stark2020thesis">Jessica Theresa Stark. (2020). <span style="text-decoration: underline">Redesigning instructional tools for novice makers</span>. </span>
 
