--- a/papers/jones2022rescuecastr/index.html
+++ b/papers/jones2022rescuecastr/index.html
@@ -102,7 +102,7 @@
 	<a href="https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4)</a><br/>
 
 
-	<a href="https://dl.acm.org/doi/10.1145/3512960"><i class="fa fa-external-link"></i> DOI (https://dl.acm.org/doi/10.1145/3512960)</a><br/>
+	<a href="https://doi.org/10.1145/3512960"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3512960)</a><br/>
 
 </p>
 
@@ -116,7 +116,7 @@
 &nbsp;&nbsp;type = {journal},<br />
 &nbsp;&nbsp;volume = {2, CSCW},<br />
 &nbsp;&nbsp;year = {2022},<br />
-&nbsp;&nbsp;doi = {https://dl.acm.org/doi/10.1145/3512960},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3512960},<br />
 &nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.pdf},<br />
 &nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-rescuecastr.mp4}<br />
 }<br />
