--- a/papers/li2021routetapestries/index.html
+++ b/papers/li2021routetapestries/index.html
@@ -106,6 +106,8 @@
 	<a href="http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4)</a><br/>
 
 
+	<a href="https://doi.org/10.1145/3472749.3474746"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3472749.3474746)</a><br/>
+
 </p>
 
 
@@ -120,7 +122,8 @@
 &nbsp;&nbsp;acceptance = {95/367 - 25.9%},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-uist2021-li-routetapestries.pdf},<br />
 &nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-uist2021-li-routetapestries.mp4},<br />
-&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=0uAhUxJXgpc}<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=0uAhUxJXgpc},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3472749.3474746}<br />
 }<br />
 </p>
 					</div>
