--- a/papers/mahadevan2021hri/index.html
+++ b/papers/mahadevan2021hri/index.html
@@ -108,6 +108,8 @@
 	<a href="http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4)</a><br/>
 
 
+	<a href="https://doi.org/10.1145/3411764.3445355"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3411764.3445355)</a><br/>
+
 </p>
 
 
@@ -123,7 +125,8 @@
 &nbsp;&nbsp;notes = {Best Paper Nominee (top 5{\%} of submissions)},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.pdf},<br />
 &nbsp;&nbsp;videourl = {http://hcitang.org/papers/2021-chi2021-mahadevan-grip-that-there.mp4},<br />
-&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=Fvn_qjWJqwk}<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=Fvn_qjWJqwk},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3411764.3445355}<br />
 }<br />
 </p>
 					</div>
