--- a/papers/mok2023autisticlivestreamers/index.html
+++ b/papers/mok2023autisticlivestreamers/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</title>
+		<title>Experiences of Autistic Twitch Livestreamers: "I have made easily the most meaningful and impactful relationships"</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</h1>
+						<h1 style="margin: 0 0 0.5em 0">Experiences of Autistic Twitch Livestreamers: "I have made easily the most meaningful and impactful relationships"</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, CSCW2.</span>
+<span id="mok2023autisticlivestreamers">Terrance Mok, Anthony Tang, Adam McCrimmon, and Lora Oehlberg. (2023). <span style="text-decoration: underline">Experiences of Autistic Twitch Livestreamers: "I have made easily the most meaningful and impactful relationships"</span>. In <i>ASSETS 2023: Proceedings of the 25th International ACM SIGACCESS Conference on Computers and Accessibility</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
+<p style="margin: 0.5em 0 1em 0">We present perspectives from 10 autistic Twitch streamers regarding their experiences as livestreamers and how autism uniquely colors their experiences. Livestreaming offers a social online experience distinct from in-person, face-to-face communication, where autistic people tend to encounter challenges. Our reflexive thematic analysis of interviews with 10 participants showcases autistic livestreamers’ perspectives in their own words. Our findings center on the importance of having streamers establishing connections with others, sharing autistic identities, controlling a space for social interaction, personal growth, and accessibility challenges. In our discussion, we highlight the crucial value of having a medium for autistic representation, as well as design opportunities for streaming platforms to onboard autistic livestreamers and facilitate livestreamers’ communication with their audience.</p>
 
 <!--
 
@@ -95,34 +95,23 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf)</a><br/>
 
 
-	<a href="https://cscw.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://cscw.acm.org/2022/)</a><br/>
 
-
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3555604"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3555604)</a><br/>
+	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kumar2022tourgether,<br />
-&nbsp;&nbsp;author = {Kumar, Kartikaeya and Poretski, Lev and Li, Jiannan and Tang, Anthony},<br />
-&nbsp;&nbsp;title = { Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;volume = {6, CSCW2},<br />
-&nbsp;&nbsp;article = { 546 },<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4},<br />
-&nbsp;&nbsp;year = {2022},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mok2023autisticlivestreamers,<br />
+&nbsp;&nbsp;author = {Mok, Terrance and Tang, Anthony and McCrimmon, Adam and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = {Experiences of Autistic Twitch Livestreamers: "I have made easily the most meaningful and impactful relationships"},<br />
+&nbsp;&nbsp;booktitle = {ASSETS 2023: Proceedings of the 25th International ACM SIGACCESS Conference on Computers and Accessibility},<br />
+&nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://cscw.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3555604}<br />
+&nbsp;&nbsp;doi = {}<br />
 }<br />
 </p>
 					</div>
