--- a/papers/poretski2021whatsapplbw/index.html
+++ b/papers/poretski2021whatsapplbw/index.html
@@ -102,6 +102,8 @@
 
 
 
+	<a href="https://doi.org/10.1145/3411763.3451751"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3411763.3451751)</a><br/>
+
 </p>
 
 
@@ -114,7 +116,8 @@
 &nbsp;&nbsp;type = {poster},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-chi2021lbw-poretski-whatsapp.pdf},<br />
 &nbsp;&nbsp;year = {2021},<br />
-&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=jS_YljK-i0s}<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=jS_YljK-i0s},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3411763.3451751}<br />
 }<br />
 </p>
 					</div>
