--- a/papers/pratte2021empathy/index.html
+++ b/papers/pratte2021empathy/index.html
@@ -104,6 +104,8 @@
 
 
 
+	<a href="https://doi.org/10.1145/3430524.3440644"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3430524.3440644)</a><br/>
+
 </p>
 
 
@@ -117,7 +119,8 @@
 &nbsp;&nbsp;year = {2021},<br />
 &nbsp;&nbsp;acceptance = {29.9% - 30/134},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2021-tei2021-pratte-empathy.pdf},<br />
-&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=JBCzPt5ILxo}<br />
+&nbsp;&nbsp;url = {https://www.youtube.com/watch?v=JBCzPt5ILxo},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3430524.3440644}<br />
 }<br />
 </p>
 					</div>
