--- a/papers/feick2023turnitup/index.html
+++ b/papers/feick2023turnitup/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</title>
+		<title>Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</h1>
+						<h1 style="margin: 0 0 0.5em 0">Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, CSCW2.</span>
+<span id="feick2023turnitup">Martin Feick, André Zenner, Oscar Ariza, Anthony Tang, Cihan Biyikli, and Antonio Krüger. (2023). <span style="text-decoration: underline">Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
 
 
+
+	<small>Acceptance: 121/483 - 25.1%.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
+<p style="margin: 0.5em 0 1em 0">Rendering adequate haptic feedback for virtual interactions is an essential part of virtual reality experiences. In this work, we are specifically interested in providing haptic feedback for rotational manipulations, e.g., through knobs. We propose the use of a pseudo-haptic technique alongside a physical proxy knob to simulate various physical resistances. In a psychophysical experiment with 20 participants, we found that designers can introduce unnoticeable offsets between real and virtual rotations of the knob, and we report the corresponding detection thresholds. Based on these, we present the Pseudo-haptic Resistance technique to convey physical resistance while applying only unnoticeable pseudo-haptic manipulation. Additionally, we provide a first model on how C/D ratios correspond to physical resistance perceived during object rotation and outline how our results can be translated to other rotational manipulations. In addition, we present two example use cases that demonstrate the versatility and power of our approach.</p>
 
 <!--
 
@@ -95,34 +97,30 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf)</a><br/>
+	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
 
 
-	<a href="https://cscw.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://cscw.acm.org/2022/)</a><br/>
+
+	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
 
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3555604"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3555604)</a><br/>
+	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kumar2022tourgether,<br />
-&nbsp;&nbsp;author = {Kumar, Kartikaeya and Poretski, Lev and Li, Jiannan and Tang, Anthony},<br />
-&nbsp;&nbsp;title = { Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;volume = {6, CSCW2},<br />
-&nbsp;&nbsp;article = { 546 },<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4},<br />
-&nbsp;&nbsp;year = {2022},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2023turnitup,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Zenner, André and Ariza, Oscar and Tang, Anthony and Biyikli, Cihan and Krüger, Antonio},<br />
+&nbsp;&nbsp;title = {Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality},<br />
+&nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://cscw.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3555604}<br />
+&nbsp;&nbsp;booktitle = {UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology},<br />
+&nbsp;&nbsp;pdfurl = {},<br />
+&nbsp;&nbsp;videourl = {},<br />
+&nbsp;&nbsp;doi = {},<br />
+&nbsp;&nbsp;acceptance = {121/483 - 25.1%}<br />
 }<br />
 </p>
 					</div>
