--- a/papers/feick2023voxelhap/index.html
+++ b/papers/feick2023voxelhap/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</title>
+		<title>VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</h1>
+						<h1 style="margin: 0 0 0.5em 0">VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="kumar2022tourgether">Kartikaeya Kumar, Lev Poretski, Jiannan Li, and Anthony Tang. (2022). <span style="text-decoration: underline"> Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation</span>. <i>Proceedings of the ACM on Human-Computer Interaction (PACMHCI)</i> 6, CSCW2.</span>
+<span id="feick2023voxelhap">Martin Feick, Cihan Biyikli, Kiran Gani, Anton Wittig, Anthony Tang, and Antonio Krüger. (2023). <span style="text-decoration: underline">VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
 
 
+
+	<small>Acceptance: 121/483 - 25.1%.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Remote teleoperation is an important robot control method when they cannot operate fully autonomously. Yet, teleoperation presents challenges to effective and full robot utilization: controls are cumbersome, inefficient, and the teleoperator needs to actively attend to the robot and its environment. Inspired by end-user programming, we propose a new interaction paradigm to support robot teleoperation for combinations of repetitive and complex movements. We introduce Mimic, a system that allows teleoperators to demonstrate and save robot trajectories as templates, and re-use them to execute the same action in new situations. Templates can be re-used through (1) macros—parametrized templates assigned to and activated by buttons on the controller, and (2) programs—sequences of parametrized templates that operate autonomously. A user study in a simulated environment showed that after initial set up time, participants completed manipulation tasks faster and more easily compared to traditional direct control.</p>
+<p style="margin: 0.5em 0 1em 0">Experiencing virtual environments is often limited to abstract interactions with objects. We present the VoxelHap toolkit which enables users to construct highly functional proxy objects using Voxels and Plates. Voxels are blocks with special functionalities that form the core of each physical proxy. Plates increase a proxy’s haptic resolution, such as its shape, texture, or weight. Beyond providing physical capabilities to realize haptic sensations, VoxelHap utilizes physio-haptic VR illusion techniques to expand its haptic rendering capabilities. We illustrate the capabilities of the VoxelHap toolkit through the construction of a range of fully functional proxies across a variety of use cases and applications. In two experiments with 24 participants, we investigate a subset of the constructed proxies, and study how they compare to a traditional VR controller. First, we investigated VoxelHap’s combined haptic feedback and second, the trade-offs of using ShapePlates. Our findings show that VoxelHap’s proxies outperform traditional controllers and were generally favored by participants.</p>
 
 <!--
 
@@ -95,34 +97,30 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf)</a><br/>
+	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
 
 
-	<a href="https://cscw.acm.org/2022/"><i class="fa fa-sticky-note-o"></i> URL (https://cscw.acm.org/2022/)</a><br/>
+
+	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
 
 
-	<a href="https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4"><i class="fa fa-film"></i> Video (https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3555604"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3555604)</a><br/>
+	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{kumar2022tourgether,<br />
-&nbsp;&nbsp;author = {Kumar, Kartikaeya and Poretski, Lev and Li, Jiannan and Tang, Anthony},<br />
-&nbsp;&nbsp;title = { Tourgether360: Collaborative Exploration of 360 Tour Videos using Pseudo-Spatial Navigation},<br />
-&nbsp;&nbsp;journal = {Proceedings of the ACM on Human-Computer Interaction (PACMHCI)},<br />
-&nbsp;&nbsp;volume = {6, CSCW2},<br />
-&nbsp;&nbsp;article = { 546 },<br />
-&nbsp;&nbsp;pdfurl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.pdf},<br />
-&nbsp;&nbsp;videourl = {https://hcitang.org/papers/2022-cscw2022-kumar-tourgether360.mp4},<br />
-&nbsp;&nbsp;year = {2022},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2023voxelhap,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Biyikli, Cihan and Gani, Kiran and Wittig, Anton and Tang, Anthony and Krüger, Antonio},<br />
+&nbsp;&nbsp;title = {VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality},<br />
+&nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;url = {https://cscw.acm.org/2022/},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3555604}<br />
+&nbsp;&nbsp;booktitle = {UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology},<br />
+&nbsp;&nbsp;pdfurl = {},<br />
+&nbsp;&nbsp;videourl = {},<br />
+&nbsp;&nbsp;doi = {},<br />
+&nbsp;&nbsp;acceptance = {121/483 - 25.1%}<br />
 }<br />
 </p>
 					</div>
