--- a/papers/labrie2022onlineteaching/index.html
+++ b/papers/labrie2022onlineteaching/index.html
@@ -100,6 +100,8 @@
 
 
 
+	<a href="https://doi.org/10.1145/3492829"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3492829)</a><br/>
+
 </p>
 
 
@@ -113,7 +115,8 @@
 &nbsp;&nbsp;volume = {6, GROUP},<br />
 &nbsp;&nbsp;year = {2022},<br />
 &nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2022-pacmgroup-labrie-video-conferencing.pdf},<br />
-&nbsp;&nbsp;article = {10}<br />
+&nbsp;&nbsp;article = {10},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3492829}<br />
 }<br />
 </p>
 					</div>
