update on a bunch of pdfs etc.

--- a/papers/byType.html
+++ b/papers/byType.html
@@ -332,7 +332,7 @@
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
@@ -347,13 +347,19 @@
 
 (conference).</a><br />
 
+	<small>Acceptance: 55/181 - 30%.</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2023-assets2023-mok-autistic-livestreamers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
 
-
-
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3597638.3608416"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/mok2023autisticlivestreamers/"><!-- --></a></li>
 <li><section id="citation">
@@ -368,14 +374,14 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href=""><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3586183.3606787"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2023turnitup/"><!-- --></a></li>
 <li><section id="citation">
@@ -408,14 +414,14 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href=""><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3586183.3606722"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2023voxelhap/"><!-- --></a></li>
 <li><section id="citation">
@@ -1990,6 +1996,24 @@
 
 <h1><a name="Workshop"></a>Workshop</h1>
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/poh2023artefactawarenessworkshop"><span id="poh2023artefactawarenessworkshop">Emran Poh, Anthony Tang, Jeannie S. Lee, and Shengdong Zhao. (2023). <span style="text-decoration: underline"> Supporting Artefact Awareness in Partially-Replicated Workspaces </span>. In <i>ISMAR23 Workshop: 1st Joint Workshop on Cross Reality</i>.</span>
+
+	(Liang, Hai-Ning and Jetter, Hans-Christian and Maurer, Frank and Gruenefeld, Uwe and Billinghurst, Mark and Anthes, Christoph, Eds.)
+
+(workshop).</a><br />
+
+
+
+
+	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/poh2023artefactawarenessworkshop/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/pratte2023hacklesworkshop"><span id="pratte2023hacklesworkshop">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
 
 	(Lee-Smith, Matthew and Benjamin, Jesse Josua and Desjardins, Audrey and Funk, Mathias and Odom, William and Oogjes, Doenja and Park, Young-Woo and Pierce, James and Sanches, Pedro and Tsaknaki, Vasiliki, Eds.)
@@ -1999,7 +2023,7 @@
 
 
 
-	<a href=" 2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i></a>
@@ -2017,7 +2041,7 @@
 
 
 
-	<a href=" 2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://in2writing.glitch.me/"><i class="fa fa-sticky-note-o"></i></a>
