--- a/papers/mok2023autisticlivestreamers/index.html
+++ b/papers/mok2023autisticlivestreamers/index.html
@@ -83,6 +83,8 @@
 
 
 
+	<small>Acceptance: 55/181 - 30%.</small>
+
 </p>
 
 <h2>Abstract</h2>
@@ -95,10 +97,12 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href="http://hcitang.org/papers/2023-assets2023-mok-autistic-livestreamers.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-assets2023-mok-autistic-livestreamers.pdf)</a><br/>
 
 
 
-	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
+
+	<a href="https://doi.org/10.1145/3597638.3608416"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3597638.3608416)</a><br/>
 
 </p>
 
@@ -111,7 +115,9 @@
 &nbsp;&nbsp;booktitle = {ASSETS 2023: Proceedings of the 25th International ACM SIGACCESS Conference on Computers and Accessibility},<br />
 &nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;doi = {}<br />
+&nbsp;&nbsp;acceptance = {55/181 - 30%},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-assets2023-mok-autistic-livestreamers.pdf},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3597638.3608416}<br />
 }<br />
 </p>
 					</div>
