--- a/papers/stark2023fictionworkshop/index.html
+++ b/papers/stark2023fictionworkshop/index.html
@@ -95,7 +95,7 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=" 2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( 2023-chi2023workshop-stark-fiction-writers.pdf)</a><br/>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2023-chi2023workshop-stark-fiction-writers.pdf)</a><br/>
 
 
 	<a href="https://in2writing.glitch.me/"><i class="fa fa-sticky-note-o"></i> URL (https://in2writing.glitch.me/)</a><br/>
@@ -112,7 +112,7 @@
 &nbsp;&nbsp;title = { Can AI Support Fiction Writers Without Writing For Them? },<br />
 &nbsp;&nbsp;booktitle = {CHI23 Workshop: In2Writing - The Second Workshop on Intelligent and Interactive Writing Assistants},<br />
 &nbsp;&nbsp;editor = {Gero, Katy Ilonka and Chang, Minsuk and Huang, Ting-Hao 'Kenneth' and Chung, John Joon Young and Raheja, Vipul and Wambsganss, Thiemo and Kang, Dongyeop and Lee, Mina},<br />
-&nbsp;&nbsp;pdfurl = { 2023-chi2023workshop-stark-fiction-writers.pdf},<br />
+&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2023-chi2023workshop-stark-fiction-writers.pdf},<br />
 &nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {workshop},<br />
 &nbsp;&nbsp;url = {https://in2writing.glitch.me/}<br />
