--- a/projects/hai-collaboration/index.html
+++ b/projects/hai-collaboration/index.html
@@ -233,7 +233,7 @@
 
 
 
-	<a href=" 2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://in2writing.glitch.me/"><i class="fa fa-sticky-note-o"></i></a>
@@ -249,7 +249,7 @@
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
