--- a/papers/feick2023turnitup/index.html
+++ b/papers/feick2023turnitup/index.html
@@ -97,14 +97,14 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-uist2023-feick-turnitup.pdf)</a><br/>
 
 
 
-	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2023-uist2023-feick-turnitup.mp4)</a><br/>
 
 
-	<a href=""><i class="fa fa-external-link"></i> DOI ()</a><br/>
+	<a href="https://doi.org/10.1145/3586183.3606787"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3586183.3606787)</a><br/>
 
 </p>
 
@@ -117,9 +117,9 @@
 &nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {conference},<br />
 &nbsp;&nbsp;booktitle = {UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology},<br />
-&nbsp;&nbsp;pdfurl = {},<br />
-&nbsp;&nbsp;videourl = {},<br />
-&nbsp;&nbsp;doi = {},<br />
+&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-uist2023-feick-turnitup.pdf},<br />
+&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2023-uist2023-feick-turnitup.mp4},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3586183.3606787},<br />
 &nbsp;&nbsp;acceptance = {121/483 - 25.1%}<br />
 }<br />
 </p>
