--- a/papers/index.html
+++ b/papers/index.html
@@ -141,6 +141,28 @@
 
 </section><a class="details" href="/papers/pratte2023designspace/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/feick2023turnitup"><span id="feick2023turnitup">Martin Feick, André Zenner, Oscar Ariza, Anthony Tang, Cihan Biyikli, and Antonio Krüger. (2023). <span style="text-decoration: underline">Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 121/483 - 25.1%.</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3586183.3606787"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2023turnitup/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/feick2023voxelhap"><span id="feick2023voxelhap">Martin Feick, Cihan Biyikli, Kiran Gani, Anton Wittig, Anthony Tang, and Antonio Krüger. (2023). <span style="text-decoration: underline">VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
 
 (conference).</a><br />
@@ -152,14 +174,14 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href=""><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3586183.3606722"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2023voxelhap/"><!-- --></a></li>
 <li><section id="citation">
@@ -167,13 +189,19 @@
 
 (conference).</a><br />
 
+	<small>Acceptance: 55/181 - 30%.</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2023-assets2023-mok-autistic-livestreamers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
 
-
-
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3597638.3608416"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/mok2023autisticlivestreamers/"><!-- --></a></li>
 <li><section id="citation">
@@ -186,7 +214,7 @@
 
 
 
-	<a href=" 2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i></a>
@@ -204,7 +232,7 @@
 
 
 
-	<a href=" 2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://in2writing.glitch.me/"><i class="fa fa-sticky-note-o"></i></a>
@@ -220,7 +248,7 @@
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
@@ -249,27 +277,23 @@
 
 </section><a class="details" href="/papers/feick2023handredirection/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/feick2023turnitup"><span id="feick2023turnitup">Martin Feick, André Zenner, Oscar Ariza, Anthony Tang, Cihan Biyikli, and Antonio Krüger. (2023). <span style="text-decoration: underline">Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
+    <a href="/papers/poh2023artefactawarenessworkshop"><span id="poh2023artefactawarenessworkshop">Emran Poh, Anthony Tang, Jeannie S. Lee, and Shengdong Zhao. (2023). <span style="text-decoration: underline"> Supporting Artefact Awareness in Partially-Replicated Workspaces </span>. In <i>ISMAR23 Workshop: 1st Joint Workshop on Cross Reality</i>.</span>
 
-(conference).</a><br />
+	(Liang, Hai-Ning and Jetter, Hans-Christian and Maurer, Frank and Gruenefeld, Uwe and Billinghurst, Mark and Anthes, Christoph, Eds.)
 
-	<small>Acceptance: 121/483 - 25.1%.</small>
-
-
-
-	<br />
-
-
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+(workshop).</a><br />
 
 
 
-	<a href=""><i class="fa fa-film"></i></a>
+
+	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness"><i class="fa fa-file-pdf-o"></i></a>
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i></a>
 
-</section><a class="details" href="/papers/feick2023turnitup/"><!-- --></a></li></ol>
+
+
+</section><a class="details" href="/papers/poh2023artefactawarenessworkshop/"><!-- --></a></li></ol>
 
 <h1><a name="2022"></a>2022</h1>
 <ol class="bibliography"><li><section id="citation">
