--- a/papers/pratte2023hacklesworkshop/index.html
+++ b/papers/pratte2023hacklesworkshop/index.html
@@ -95,7 +95,7 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href=" 2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( 2023-chi2023workshop-pratte-hackles.pdf)</a><br/>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2023-chi2023workshop-pratte-hackles.pdf)</a><br/>
 
 
 	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i> URL (https://materialfordesign.net/chi2023_workshop/)</a><br/>
@@ -112,7 +112,7 @@
 &nbsp;&nbsp;title = { HACKLES: A Case Study on Using Data to Create Experiences with Wearables },<br />
 &nbsp;&nbsp;booktitle = {CHI22 Workshop: Toolkits & Wearables - Developing Toolkits for Exploring Wearable Designs},<br />
 &nbsp;&nbsp;editor = {Lee-Smith, Matthew and Benjamin, Jesse Josua and Desjardins, Audrey and Funk, Mathias and Odom, William and Oogjes, Doenja and Park, Young-Woo and Pierce, James and Sanches, Pedro and Tsaknaki, Vasiliki},<br />
-&nbsp;&nbsp;pdfurl = { 2023-chi2023workshop-pratte-hackles.pdf},<br />
+&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2023-chi2023workshop-pratte-hackles.pdf},<br />
 &nbsp;&nbsp;year = {2023},<br />
 &nbsp;&nbsp;type = {workshop},<br />
 &nbsp;&nbsp;url = {https://materialfordesign.net/chi2023_workshop/}<br />
