--- a/projects/efashion/index.html
+++ b/projects/efashion/index.html
@@ -228,6 +228,24 @@
 <h2 id="publications">Publications</h2>
 
 <ol class="bibliography"><li><section id="citation">
+    <a href="/papers/pratte2023hacklesworkshop"><span id="pratte2023hacklesworkshop">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
+
+	(Lee-Smith, Matthew and Benjamin, Jesse Josua and Desjardins, Audrey and Funk, Mathias and Odom, William and Oogjes, Doenja and Park, Young-Woo and Pierce, James and Sanches, Pedro and Tsaknaki, Vasiliki, Eds.)
+
+(workshop).</a><br />
+
+
+
+
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/pratte2023hacklesworkshop/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/pratte2023designspace"><span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
 
 (conference).</a><br />
@@ -245,24 +263,6 @@
 	<a href="https://doi.org/10.1145/3569009.3573899"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/pratte2023designspace/"><!-- --></a></li>
-<li><section id="citation">
-    <a href="/papers/pratte2023hacklesworkshop"><span id="pratte2023hacklesworkshop">Sydney Pratte, Anthony Tang, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> HACKLES: A Case Study on Using Data to Create Experiences with Wearables </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
-
-	(Lee-Smith, Matthew and Benjamin, Jesse Josua and Desjardins, Audrey and Funk, Mathias and Odom, William and Oogjes, Doenja and Park, Young-Woo and Pierce, James and Sanches, Pedro and Tsaknaki, Vasiliki, Eds.)
-
-(workshop).</a><br />
-
-
-
-
-	<a href=" 2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
-
-
-	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i></a>
-
-
-
-</section><a class="details" href="/papers/pratte2023hacklesworkshop/"><!-- --></a></li>
 <li><section id="citation">
     <a href="/papers/pratte2022nlitenworkshop"><span id="pratte2022nlitenworkshop">Sydney Pratte, Shannon Hoover, Anthony Tang, and Lora Oehlberg. (2022). <span style="text-decoration: underline"> nLITEn: A Wearables Toolkit for Enabling Creativity in Fashion Technology Design </span>. In <i>CHI22 Workshop: Toolkits &amp; Wearables - Developing Toolkits for Exploring Wearable Designs</i>.</span>
 
